// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitterLayout Render Horizontal SplitterLayout with multiple SplitterElements 1`] = `
<DocumentFragment>
  <div
    class="SplitterLayout-splitterLayout"
    data-splitter-vertical="false"
    data-testid="Layout"
    style="flex-direction: column; width: 80vw; height: 600px;"
  >
    <div
      class="SplitterElement-splitterElement"
      data-min-size="0"
    >
      <ui5-button
        design="Default"
        ui5-button=""
      >
        Button 1
      </ui5-button>
    </div>
    <div
      aria-orientation="horizontal"
      class="Splitter-splitter"
      data-splitter-vertical="false"
      role="separator"
      tabindex="0"
      title="Splitter"
    >
      <div
        class="Splitter-lineBefore"
      />
      <ui5-icon
        class="Splitter-icon"
        name="horizontal-grip"
        ui5-icon=""
      />
      <div
        class="Splitter-lineAfter"
      />
    </div>
    <div
      class="SplitterElement-splitterElement"
      data-min-size="50"
      data-testid="Element"
      style="min-height: 50px; flex-basis: 100px;"
    >
      <ui5-button
        design="Default"
        ui5-button=""
      >
        Button 2
      </ui5-button>
    </div>
    <div
      aria-orientation="horizontal"
      class="Splitter-splitter"
      data-splitter-vertical="false"
      role="separator"
      tabindex="0"
      title="Splitter"
    >
      <div
        class="Splitter-lineBefore"
      />
      <ui5-icon
        class="Splitter-icon"
        name="horizontal-grip"
        ui5-icon=""
      />
      <div
        class="Splitter-lineAfter"
      />
    </div>
    <div
      class="SplitterElement-splitterElement"
      data-min-size="0"
      style="flex: 1 0 auto;"
    >
      <ui5-button
        design="Default"
        ui5-button=""
      >
        Button 3
      </ui5-button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SplitterLayout Render SplitterLayout without props and children 1`] = `
<DocumentFragment>
  <div
    class="SplitterLayout-splitterLayout"
    data-splitter-vertical="true"
    style="flex-direction: row;"
  />
</DocumentFragment>
`;

exports[`SplitterLayout Render Vertical SplitterLayout with multiple SplitterElements 1`] = `
<DocumentFragment>
  <div
    class="SplitterLayout-splitterLayout"
    data-splitter-vertical="true"
    data-testid="SplitterLayout"
    style="flex-direction: row; width: 800px; height: 400px;"
  >
    <div
      class="SplitterElement-splitterElement"
      data-min-size="0"
      data-testid="SplitterElement1"
      style="flex-basis: 200px;"
    >
      <ui5-button
        data-testid="Button"
        design="Default"
        ui5-button=""
      >
        Button 1
      </ui5-button>
    </div>
    <div
      aria-orientation="vertical"
      class="Splitter-splitter"
      data-splitter-vertical="true"
      role="separator"
      tabindex="0"
      title="Splitter"
    >
      <div
        class="Splitter-lineBefore"
      />
      <ui5-icon
        class="Splitter-icon"
        name="vertical-grip"
        ui5-icon=""
      />
      <div
        class="Splitter-lineAfter"
      />
    </div>
    <div
      class="SplitterElement-splitterElement"
      data-min-size="300"
      data-testid="SplitterElement2"
      style="min-width: 300px; flex-basis: 400px;"
    >
      <ui5-button
        design="Default"
        ui5-button=""
      >
        Button 2
      </ui5-button>
    </div>
    <div
      class="SplitterElement-splitterElement"
      data-min-size="0"
      data-testid="SplitterElement3"
      style="flex: 1 0 auto;"
    >
      <ui5-button
        design="Default"
        ui5-button=""
      >
        Button 3
      </ui5-button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SplitterLayout Render Vertical SplitterLayout with only one SplitterElements 1`] = `
<DocumentFragment>
  <div
    class="SplitterLayout-splitterLayout"
    data-splitter-vertical="true"
    data-testid="SplitterLayout"
    style="flex-direction: row; width: 700px; height: 400px;"
  >
    <div
      class="SplitterElement-splitterElement"
      data-min-size="0"
      data-testid="SplitterElement"
      style="flex-basis: 200px;"
    >
      <ui5-button
        data-testid="Button"
        design="Default"
        ui5-button=""
      >
        Button 1
      </ui5-button>
    </div>
  </div>
</DocumentFragment>
`;
